--- a/shopServer/templates/login.html
+++ b/shopServer/templates/login.html
@@ -1,4 +1,4 @@
-
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -22,7 +22,7 @@
 				<li >欢迎来到xxxx商城!</li></ul>
                 <ul class="headerul2">
 				<li style="_width:49px;"><a href="">登录</a></li>
-				<li style="_width:49px;"><a href="">注册</a></li>
+				<li style="_width:49px;"><span class="rapidregister"><a>注册</a></span></li>
                 <li class="hreder-hover"><a href="" target="_blank" style="border-right:none;_width:213px;padding-left:30px"><i class="header_phone"></i>在线客服 : <b style="font-size:16px;">400-654-1024</b></a></li>
 			</ul>
 		</div>
@@ -94,6 +94,7 @@
 			
 			</div>
 </body>
+<script src="{% static 'layer/layer.js' %}" type="text/javascript" charset="utf-8"></script>
 <script>
 	console.log(localStorage)
 	//ajax请求函数
@@ -158,7 +159,10 @@
 			success: function (result) {
 				aa=result.status;
 				console.log(aa);
-				if (aa=="ok"){
+				if (aa == "codeError") {
+					layer.msg("验证码错误")
+				}
+				else if (aa=="ok") {
 					console.log("1111111111111111111")
 					aaa=document.getElementById("name").value
 					var str={names:aaa}
@@ -171,13 +175,12 @@
 					setTimeout(function(){
 						window.location.href="http://localhost:8000/goodsManage/";
 					},1000)
-					
-				}
-				else{
+				} 
+				else {
 					document.getElementById("pwd").value = "";
 					document.getElementById("code").value = ""
 					changeCode()
-					alert("账号或密码输入错误！");
+					layer.msg("账号或密码输入错误！");
 				}
 				console.log(result);
 			}
